<package format="2">
  <name>create_description</name>
  <version>2.3.1</version>
  <description>Model description for the iRobot Create</description>
  <maintainer email="turtlebot@osrfoundation.com">OSRF</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/create_description</url>
  <url type="repository">https://github.com/turtlebot/turtlebot_create</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot_create/issues</url>
  <author email="turtlebot@willowgarage.com">Willow</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
